center img and fix button overflow on homepage

--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -61,14 +61,17 @@
     margin: 5px;
     overflow: hidden;
     border-radius: 5px;
+    max-width: inherit;
+    text-align: center;
 }
 
 img.homepage {
     height: 200px;
+    /* margin: 0 auto; */
 }
 
 .thumbnail {
-    height: 420px;
+    height: 478px;
 }
 
 .homepageThumbnail {
